--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "react-router": "^2.5.2"
   }
 }
