--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint-loader": "^1.4.0",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-watch": "^4.3.9",
     "node-gyp": "^3.4.0",
     "node-sass": "^3.8.0",
     "react": "^15.2.0",
@@ -31,7 +34,8 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
