--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "study",
   "main": "index.js",
   "scripts": {
-    "start": "node server"
+    "start": "gulp"
   },
   "keywords": [
     "react",
