--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.0",
     "eslint-loader": "^1.4.0",
@@ -40,6 +45,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.13.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-router": "^2.5.2"
   }
 }
