--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "lodash": "^4.13.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-router": "^2.5.2"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "redux": "^3.6.0"
   }
 }
