--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
