--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
