--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-watch": "^4.3.9",
     "mockjs": "^1.0.1-beta3",
     "node-gyp": "^3.4.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.13.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-hot-loader": "^1.3.0",
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "formsy-react": "^0.19.2",
     "lodash": "^4.13.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
